--- a/_includes/person.html
+++ b/_includes/person.html
@@ -7,7 +7,8 @@
         <li><span>性别: </span>{{site.aboutme.sex}}</li>
         <li><span>年龄: </span>{{site.aboutme.age}}</li>
         <li><span>学历: </span>{{site.aboutme.edu}}</li>
-        <li><span>职位: </span>{{site.aboutme.job}}</li>
+        <li><span>毕业院校: </span>{{site.aboutme.university}}</li>
+        <li><span>研究方向: </span>{{site.aboutme.research field}}</li>
         <li><span>现居地: </span>{{site.aboutme.city}}</li>
         <li><span>邮件: </span>{{site.aboutme.email}}</li>
         <li><span>电话: </span>{{site.aboutme.phone}}</li>
