--- a/_includes/person.html
+++ b/_includes/person.html
@@ -9,7 +9,7 @@
         <li><span>学历: </span>{{site.aboutme.edu}}</li>
         <li><span>现居地: </span>{{site.aboutme.city}}</li>
         <li><span>毕业院校: </span>{{site.aboutme.university}}</li>
-        <li><span>研究方向: </span>{{site.aboutme.research field}}</li>
+        <li><span>研究方向: </span>{{site.aboutme.research}}</li>
         <li><span>邮件: </span>{{site.aboutme.email}}</li>
         <li><span>电话: </span>{{site.aboutme.phone}}</li>
         <li><span>Github: </span>{{site.aboutme.github}}</li>
