--- a/_includes/person.html
+++ b/_includes/person.html
@@ -16,7 +16,7 @@
       </ul>
     </div>
     <div class="items">
-      <img src="assets/img/profile.jpg">
+      <img src="assets/img/avatar.jpg">
     </div>
   </div>
 </article>
