--- a/assets/style.css
+++ b/assets/style.css
@@ -58,7 +58,7 @@ ul,ol {
   padding-left: 20px;
 }
 ul,ol > li {
-  list-style-type: lower-greek;
+  list-style-type: square;
   line-height: 30px;
   font-size: 16px;
 }
