--- a/assets/style.css
+++ b/assets/style.css
@@ -84,3 +84,11 @@ p {
   font-size: 16px;
   line-height: 32px;
 }
+
+code {
+  background-color: #444;
+  color: #fff;
+  padding: 1px 8px 4px 8px;
+  border-radius: 2px;
+  margin: 0 5px;
+}
