--- a/_includes/person.html
+++ b/_includes/person.html
@@ -5,14 +5,14 @@
       <ul>
         <li><span>姓名: </span>{{site.aboutme.name}}</li>
         <li><span>性别: </span>{{site.aboutme.sex}}</li>
-        <li><span>年龄: </span>{{site.aboutme.age}}</li>
-        <li><span>学历: </span>{{site.aboutme.edu}}</li>
-        <li><span>现居地: </span>{{site.aboutme.city}}</li>
+        <li><span>出生日期: </span>{{site.aboutme.birth}}</li>
+        <li><span>籍贯: </span>{{site.aboutme.city}}</li>
+        <li><span>政治面貌: </span>{{site.aboutme.policy}}</li>
         <li><span>毕业院校: </span>{{site.aboutme.university}}</li>
         <li><span>研究方向: </span>{{site.aboutme.research}}</li>
-        <li><span>邮件: </span>{{site.aboutme.email}}</li>
-        <li><span>电话: </span>{{site.aboutme.phone}}</li>
-        <li><span>Github: </span>{{site.aboutme.github}}</li>
+        <li><span>联系方式: </span>{{site.aboutme.phone}}</li>
+        <li><span>邮箱地址: </span>{{site.aboutme.email}}</li> 
+        <li><span>联系地址: </span>{{site.aboutme.github}}</li>
       </ul>
     </div>
     <div class="items">
