--- a/_includes/person.html
+++ b/_includes/person.html
@@ -9,10 +9,9 @@
         <li><span>籍贯: </span>{{site.aboutme.city}}</li>
         <li><span>政治面貌: </span>{{site.aboutme.policy}}</li>
         <li><span>毕业院校: </span>{{site.aboutme.university}}</li>
-        <li><span>研究方向: </span>{{site.aboutme.research}}</li>
         <li><span>联系方式: </span>{{site.aboutme.phone}}</li>
         <li><span>邮箱地址: </span>{{site.aboutme.email}}</li> 
-        <li><span>联系地址: </span>{{site.aboutme.github}}</li>
+        <li><span>联系地址: </span>{{site.aboutme.address}}</li>
       </ul>
     </div>
     <div class="items">
